更新远景一面 补充js相关

--- a/09.面试复盘/面试复盘.md
+++ b/09.面试复盘/面试复盘.md
@@ -14,25 +14,26 @@
   东方财富 无消息
   4399（广州） 无消息
   亚信科技 无消息
-  远景智能 无消息
   恒生电子 太晚 6.21才笔试
   vivo 一面挂
-  中科院空天院苏州研究院 一面
+  中科院空天院苏州研究院 一面挂
+  远景智能 一面
   美团 一面 二面挂
   华为 一面 二面 泡池子
   网易雷火 一面 二面 三面 HR面
   学而思（北京）一面 二面 HR面
   触宝（上海） 一面 二面 （已offer）
+  趣头条（上海）
 ```
 
 - [面试复盘记录](#面试复盘记录)
   - [vivo 南京](#vivo-南京)
     - [一面 2020/04/09](#一面-20200409)
   - [华为 CBG 软件部 南研所](#华为-cbg-软件部-南研所)
-    - [一面 2020/4/22](#一面-2020422)
+    - [一面 2020/4/22 42min](#一面-2020422-42min)
     - [二面 2020/5/13 40min](#二面-2020513-40min)
   - [美团 上海 到店](#美团-上海-到店)
-    - [美团一面 40min](#美团一面-40min)
+    - [一面 2020/4/23 40min](#一面-2020423-40min)
     - [二面 2020/5/12 45min](#二面-2020512-45min)
   - [网易雷火 杭州](#网易雷火-杭州)
     - [一面 2020/5/11 45min](#一面-2020511-45min)
@@ -46,44 +47,34 @@
   - [触宝 上海](#触宝-上海)
     - [一面 2020/5/19 50min](#一面-2020519-50min)
     - [二面 2020/5/21 45min](#二面-2020521-45min)
+  - [远景 上海](#远景-上海)
+    - [一面 2020/5/27 25min](#一面-2020527-25min)
+  - [趣头条 上海](#趣头条-上海)
+    - [一面 2020/5/28](#一面-2020528)
 
 ## vivo 南京
 
 ### 一面 2020/04/09
 
 1. css 盒模型
-
 2. css 居中垂直对齐
-
 3. box-sizing 的用法
-
 4. 点击按钮使得页面上的文字颜色发生改变如何实现
-
 5. 闭包 闭包的使用场景 缺点
-
 6. 事件冒泡，如何阻止事件冒泡
-
 7. 事件循环 promise 跟 setTimeout 哪个先执行
-
 8. 知道哪些 ES6 的东西 如何解决 ES6 的语法兼容
-
 9. ES6 this
-
 10. ES6 let 的用法，var let 的区别
-
 11. vue 知不知道 vuex vue-router 的使用
-
 12. vue 中数组的添加没效果是什么问题
-
 13. 问了一下实习时间
-
 14. 未来的规划
-
 15. 你有什么想问我的
 
 ## 华为 CBG 软件部 南研所
 
-### 一面 2020/4/22
+### 一面 2020/4/22 42min
 
 1. 手撕代码：找出数组中重复的数字；要求不能开辟新空间；时间复杂度小于 O(N^2)
 
@@ -122,59 +113,41 @@
     ```
 
 2. hash 原理
-
 3. DP 思想
-
 4. 知道哪些数据结构
-
 5. 学过 python，用 python 做了什么
-
 6. 这些前端技术栈是课程学习的还是自学的
-
 7. 在实验室做了什么？收获是什么
 
 ### 二面 2020/5/13 40min
 
 1. 自我介绍
-
 2. 前端项目是导师的要求吗
-
 3. 讨论论文、专利
-
 4. 论文在实际应用中的实现难度在哪里
-
 5. 职业规划
-
 6. 你学的专业华为也有对口的岗位，交换机之类的，为什么要走软件开发
-
 7. 你走软件工程方向的你大学所学的电子信息专业的东西就都白费了
-
 8. 你对 JAVA/C/C++有用过吗
-
 9. 企业中没有专门用前端语言来写的项目怎么办？（你愿不愿意转方向）
-
 10. 实习时间
 
 ## 美团 上海 到店
 
-### 美团一面 40min
+### 一面 2020/4/23 40min
 
 1. doctype 的作用
     声明版本，第一题就答错了，我答的是用来区分是标准模式还是混杂模式。。。
 2. 语义化标签的理解
     说是与计算机编译也有关系!!!
 3. css 选择器优先级
-
 4. important 有什么不好
     有时候程序员忘了删除
 5. css 选择器的解析顺序
     从右往左
 6. css 清除浮动
-
 7. overflow:hidden 是怎么清除浮动的
-
 8. 浏览器的同源政策
-
 9. 浏览器如何跨域
     通过 jsonp，（我还说了通过 webSocket 协议跨域，但是面试官说是错的）
 
@@ -192,9 +165,7 @@
     ```
 
 10. get 和 post 的区别
-
 11. 说说你知道的状态码
-
 12. js 的浮点数问题
 
     ```js
@@ -208,22 +179,15 @@
 13. js 脚本 defer 和 async 的区别
     async 是异步下载并立即执行，然后文档继续解析，defer 是异步加载后解析文档，然后再执行脚本
 14. 异步 js 脚本在执行的时候主线程会停止吗
-
 15. 任务队列中有哪两种？讲讲是怎么执行的
-
 16. js 如何设置异步
     我答的是 promise 和 async/await，面试官补充了一个最基本的，通过 setTimeout 注册回调函数，举了个例子：对一个元素点击，想要延迟执行呢？我说通过对这个事件监听，注册一个回调函数，在回调函数里设置 setTimeout
-
 17. async/await 是一个语法糖，你知道 await 后面如何用吗
-
 18. js 的 this 指向问题
-
 19. this 在 node 里全局的指向是什么
     golbal
 20. 对象的深拷贝和浅拷贝
-
 21. 数组去重的办法
-
 22. git rebase 和 git merge 的区别
 
     ```js
@@ -244,81 +208,46 @@
     ```
 
 23. vue 项目用了哪些技术
-
 24. webpack 的 css 加载器和你用的 stylus 的 css 有什么不同
-
 25. 为什么要用 vue 来写呢？为什么不用原生的 js 来写
-
 26. 为什么要用 vuex
-
 27. 有没有了解一些前端前沿的技术
     回答无，只知道 vue 和 react，你给我讲几个，然后说了 vscode 跨终端框架，web assembly
-
 28. 什么时候开始学前端的
 
 ### 二面 2020/5/12 45min
 
 1. 项目介绍
-
 2. 项目你觉得比较难的地方
-
 3. 城市选择页面是怎么实现的
-
 4. 城市列表的数据是从哪来的
-
 5. 移动端布局的怎么实现的
-
 6. 移动端 200ms 延迟的原因，如何解决
-
     回答 fastclick 库
-
 7. fastclick 库是怎么实现的
-
     在检测到 touchend 事件的时候，会通过 DOM 自定义事件立即出发模拟一个 click 事件，并把浏览器在 300ms 之后真正的 click 事件阻止掉
-
 8. 如何阻止真正的 click 事件
-
 9. 事件流有哪些阶段
-
 10. 捕获阶段可以应用在哪儿
-
 11. 监听事件的方式
-
 12. addEventListener 的参数有哪些
-
 13. 浏览器缓存，怎么判断是否从缓存中取
-
 14. 地址栏输入 URL 后经历了哪些步骤
-
 15. 区分 '123' 和 123 的方法
-
 16. flex 有哪些属性
-
 17. flex-basis 属性是干嘛的
-
 18. vue 双向数据绑定，哪些不能双向绑定
-
     数组的下标方式，因为 vue2 里面是用的 Object.defineProperty() 方法
     可以通过 vue3 proxy 方式
-
 19. Object.defineProperty 是干嘛的，参数有哪些
-
 20. vue3 相对于 vue2 的区别
-
     proxy，并且 proxy 不能向下兼容(回答有点问题)
-
 21. 怎么样向下兼容
-
     babel
-
 22. `import {A} from '...'` `import A from '...'` `require('...')`的区别
-
 23. 项目用什么打包的
-
 24. webpack 的功能
-
 25. 手撕代码：1203040506 --> 1234560000 （移动 0 到最后）
-
 26. 实现 find(numbers, n, sum)的方法：在 numbers 数组中找到 n 个数的和为 sum，讲讲思路
 
     ```js
@@ -351,13 +280,9 @@
 ### 一面 2020/5/11 45min
 
 1. H5 和 C3 的新特性
-
 2. 例举 3 个你最不常用的 css 特性
-
 3. 什么是变量提升？如何避免变量提升？如何禁止变量提升
-
 4. 什么是浅拷贝？简单的浅拷贝如何实现
-
 5. ES6 有没有新增什么简单的方法浅拷贝
    - {...obj}
    - Object.assign({}, obj)
@@ -369,19 +294,12 @@
     ```
 
 7. 跨域知道哪几种
-
 8. 你用过哪种?(JSONP) JSONP 的回调函数需要定义在什么地方
-
 9. 浏览器存储你知道哪些
-
 10. cookie 和 webStorage 的区别
-
 11. cookie 是每次请求都会携带吗？怎么设置不携带 cookie
-
     满足某种条件才会不携带，然后设置某种参数才能携带
-
 12. 某种请求默认不携带 cookie
-
     fetch 请求默认不携带 cookie
 
     ```js
@@ -389,7 +307,6 @@
     ```
 
 13. vue-router 里面有两种路由模式是什么，区别是什么
-
     hash 模式 和 history 模式
 
     最大的区别：
@@ -397,51 +314,32 @@
     hash 模式不会把路径的变化发送到后端（hash 值变化不会导致浏览器向服务器发出请求）， 而 history 模式会
 
 14. 了解 SEO 吗？要做 SEO 的话要用哪种路由模式
-
     history 模式
-
 15. vue 里的 nextTick 有什么作用
-
 16. vue 哪些对数据的操作不是响应式的
-
     通过索引值修改数组中的元素 （虽然 data 被更改，但是 View 层不会发生变化
     可通过数组中的方法进行改变，或则使用 Vue 的 api： set()
 
     扯到了 vue3.0 的 proxy 方法
-
 17. vue3 现在是个什么状态？ 为什么不发布正式版本
-
     目前浏览器的生态还不足以支持 vue3，目前浏览器还不支持 vue3，再等待浏览器的升级。
 
 ### 二面 2020/5/13 50min
 
 1. 通用的自我介绍
-
 2. 项目
-
 3. rem 和 em 的区别
-
 4. 项目城市切换是如何实现的
-
 5. vuex 是什么？主要功能呢
-
 6. 浏览器缓存的过程
-
 7. 服务器一定会将 Etag 发送给浏览器吗
-
 8. Etag 和 If-Modified-Since 的区别在哪
-
 9. 禁用缓存的方式
-
 10. cookie 跟 localStorage 的区别
-
 11. localStorage 会传到服务器端吗？cookie 会传到服务器端吗
-
 12. 服务器端能否修改 cookie
-
     服务器端操作 Cookie,主要注意会使用以下三个类:
     HttpCookie,HttpResponse,HttpRequest
-
 13. 闭包
 
     问这是个闭包吗？
@@ -457,11 +355,8 @@
     ```
 
 14. reduce 方法了解吗？怎么用的
-
 15. map 方法了解吗？怎么用的
-
 16. promise 的 then 方法返回的是什么
-
 17. 如何在控制台获取页面上所有的事件对象
 
     ```js
@@ -469,87 +364,53 @@
     ```
 
 18. 控制台可以显示页面需要的静态资源吗？在哪显示
-
     控制台 Network 里
-
 19. 学前端碰到问题是怎么解决
 
 ### 三面 2020/5/18 50min
 
 1. 常规，自我介绍
-
 2. 你科研用的是机器学习这块儿的东西，为什么不走这个方向
-
 3. 介绍项目
-
 4. 项目用了什么技术
-
 5. css 定位 absolute 和 fixed 的区别
-
 6. 父子组建传值
-
 7. vuex
-
 8. vue底层原理
-
 9. vue-router两种路由模式？区别
-
 10. webpack原理
-
 11. webpack优化，比如 npm run build 很慢怎么解决
-
 12. 遇到问题怎么解决
-
 13. 给你一项任务限期内完成，你会怎么安排
 
 ### HR面 2020/5/20  30min
 
 1. 实习时间是什么样子的
-
 2. 玩过什么游戏
-
 3. 游戏最高玩到什么样的级别
-
 4. 现在为什么玩的少
-
 5. 现在为什么想做游戏的web开发
-
 6. 对游戏端web开发了解多少
-
 7. 学习了什么框架
-
 8. 讲讲你最出彩的项目
-
 9. 为什么做这个项目
-
 10. 项目遇到的难点
-
 11. 项目的成果
-
 12. 个人博客的进展是什么样子？搭博客的目的是什么
-
 13. 校学生会做了什么 碰到什么难点 怎么解决 组织活动的频率
-
 14. 有拿到其他哪家的offer
-
 15. 未来是打算呆在杭州
 
 ## 学而思 北京 学而思网校
 
 ### 一面 2020/5/15 67min
 
-1. 基本自我介绍
-
+1. 自我介绍
 2. 实现一个两列固定，中间自适应有哪些方法
-
 3. canvas 知道它的一些方法吗
-
 4. 思考一个案例：我需要等三张图片都加载完毕之后再执行回调函数，可以怎么实现
-
     Promise.all()
-
 5. setTimeout 和 Promise 哪一个先执行
-
 6. css 两种盒模型说一下，怎么切换盒模型
 
     ```js
@@ -558,9 +419,7 @@
     ```
 
 7. 清除浮动的方式，清除浮动的原理
-
 8. CSS 实现隔行变色
-
 9. 触发BFC的方式有哪些
    - 根元素(\<html>)
    - overflow 值不为 visible 的块元素
@@ -571,11 +430,8 @@
    - 网格元素（display为 grid 或 inline-grid 元素的直接子元素）
 
 10. @font-face
-
 11. transform 有哪些属性
-
 12. css 动画，有没有做过动画
-
 13. requestanimationframe 有用过吗？知道是干嘛的吗
 
     ```js
@@ -583,53 +439,30 @@
     ```
 
 14. 请求后端的方式
-
 15. Ajax 的流程
-
 16. 那你知道哪些头字段
-
 17. 服务器主动向客户端发送数据
-
     websocket
-
 18. 移动端布局的实现方式
-
 19. rem 原理
-
 20. vh vw 了解吗
-
 21. vue 中如何获取原生的 DOM 结点
     refs
     ref
-
 22. vuex 有用过吗
-
 23. NextTick 是干嘛用的
-
 24. 如何实现私有变量
-
 25. ES6 知道哪些
-
 26. 箭头函数跟普通函数的区别
-
 27. fill() 方法怎么用的
-
 28. Array.from()方法 怎么用的
-
 29. Proxy 是干嘛用的
-
 30. Object.defineProperty() 方法是干嘛的
-
 31. 讲讲 git 的流程
-
 32. webpack 有自己配置过吗？讲讲
-
 33. 听说过正则吗？出题：xiao-wang-xiao 变成 xiaoWangXiao
-
 34. todo-list 实现思路
-
 35. 数据结构了解吗？知道哪些排序方法
-
 36. 冒泡和快排讲一下思路
 
 ### 二面 2020/5/26 30min
@@ -661,30 +494,19 @@
 
 ### 一面 2020/5/19 50min
 
-1. 先来介绍一下
-
+1. 自我介绍
 2. 讲讲项目
-
 3. 轮播图实现的原理
-
 4. js基本数据类型
-
 5. null和undefined的区别
-
 6. null == undefined 的值是什么，为什么
-
 7. new 操作符的过程
 8. call apply 的区别
 9. 讲一下闭包
-
 10. 闭包打印 1-9
-
 11. splice、filter、join、split 用法
-
 12. 数组转成字符串
-
 13. 1000个button需要注册点击事件，怎么实现
-
 14. 事件代理（委托）优缺点
 
     优点：
@@ -693,9 +515,7 @@
     缺点：事件代理的常用应用应该仅限于上述需求，如果把所有事件都用事件代理，可能会出现事件误判。即本不该被触发的事件被绑定上了事件。
 
 15. 水平居中怎么实现
-
 16. H5 C3 新特性
-
 17. css不兼容的情况有了解吗，怎么解决
 
     [浏览器兼容性问题解决方案~总结](https://juejin.im/post/59a3f2fe6fb9a0249471cbb4#heading-6)
@@ -714,31 +534,20 @@
     ```
 
 18. ES6 的东西知道哪些
-
 19. let const var的区别
-
 20. 箭头函数与普通函数的区别
-
 21. 手写一个数组去重
-
 22. 排序算法，sort的用法解释一下
-
 23. 平时怎么学习前端，学了多久了，有实习经历吗
-
 24. 学习的过程中有自己做demo吗
 
 ### 二面 2020/5/21 45min
 
 1. 自我介绍
-
 2. 项目介绍
-
 3. 轮播图的实现原理
-
 4. 知道哪些数组的方法
-
 5. splice 和 slice 的区别
-
 6. 手撕代码
 
    - 问题一： 实现数组 arr 根据 id 来排序
@@ -817,13 +626,40 @@
     ```
 
 7. 浏览器缓存机制
-
 8. 这样禁止缓存
-
 9. 项目中有用到缓存吗
-
 10. 你对加班怎么看
-
 11. 实习时间
-
 12. 反问
+
+## 远景 上海
+
+### 一面 2020/5/27 25min
+
+1. 前端与后端的区别
+2. ES6常用的语法
+3. let const 的区别
+4. 箭头函数与一般函数的区别
+5. promise是用来解决什么问题的
+6. promise的用法，API方法
+7. promise捕获异常的方法
+8. 有什么其他代替promise的方法吗
+9. await可以用try捕获异常吗
+10. proxy的应用
+11. Object.defineProperty()方法的缺陷
+12. proxy除了vue中用到，还有其他什么库中用到了吗
+13. vue和react数据驱动的差异
+14. vue双向数据绑定的原理
+15. 怎么实现一个元素的在他的父级元素内水平垂直居中
+16. 你对前端工程化怎么理解的
+17. 跨域的方式
+18. vue项目中是怎么去请求接口
+19. 状态码
+20. 栈和队列的区别
+21. 给你一个栈的结构怎么模拟队列
+22. 常见的排序算法，效率比较高的是哪些
+23. 堆排序的思想
+
+## 趣头条 上海
+
+### 一面 2020/5/28
