更新趣头条面经

--- a/09.面试复盘/面试复盘.md
+++ b/09.面试复盘/面试复盘.md
@@ -23,7 +23,7 @@
   网易雷火 一面 二面 三面 HR面
   学而思（北京）一面 二面 HR面
   触宝（上海） 一面 二面 （已offer）
-  趣头条（上海）
+  趣头条（上海）一面 二面 （已offer）
 ```
 
 - [面试复盘记录](#面试复盘记录)
@@ -40,17 +40,18 @@
     - [二面 2020/5/13 50min](#二面-2020513-50min)
     - [三面 2020/5/18 50min](#三面-2020518-50min)
     - [HR面 2020/5/20  30min](#hr面-2020520-30min)
-  - [学而思 北京 学而思网校](#学而思-北京-学而思网校)
+  - [学而思 北京 学而思网校 offer](#学而思-北京-学而思网校-offer)
     - [一面 2020/5/15 67min](#一面-2020515-67min)
     - [二面 2020/5/26 30min](#二面-2020526-30min)
     - [HR面 2020/5/27 16min](#hr面-2020527-16min)
-  - [触宝 上海](#触宝-上海)
+  - [触宝 上海 offer](#触宝-上海-offer)
     - [一面 2020/5/19 50min](#一面-2020519-50min)
     - [二面 2020/5/21 45min](#二面-2020521-45min)
   - [远景 上海](#远景-上海)
     - [一面 2020/5/27 25min](#一面-2020527-25min)
-  - [趣头条 上海](#趣头条-上海)
-    - [一面 2020/5/28](#一面-2020528)
+  - [趣头条 上海 offer](#趣头条-上海-offer)
+    - [一面 2020/5/28 30min](#一面-2020528-30min)
+    - [二面 2020/5/28 17min](#二面-2020528-17min)
 
 ## vivo 南京
 
@@ -401,7 +402,7 @@
 14. 有拿到其他哪家的offer
 15. 未来是打算呆在杭州
 
-## 学而思 北京 学而思网校
+## 学而思 北京 学而思网校 offer
 
 ### 一面 2020/5/15 67min
 
@@ -490,7 +491,7 @@
 8. 毕业之后的发展规划
 9. 你还有在面其他公司的提前批吗
 
-## 触宝 上海
+## 触宝 上海 offer
 
 ### 一面 2020/5/19 50min
 
@@ -660,6 +661,37 @@
 22. 常见的排序算法，效率比较高的是哪些
 23. 堆排序的思想
 
-## 趣头条 上海
+## 趣头条 上海 offer
 
-### 一面 2020/5/28
+### 一面 2020/5/28 30min
+
+1. 语义化标签
+2. C3 的新特性
+3. transform
+4. 父节点中子节点的水平垂直居中
+5. 弹性布局
+6. js 基本数据类型
+7. null 和 undefined 的区别
+8. 深拷贝浅拷贝
+9. 实现一个函数，将多维的数组降维成一维
+10. 同源策略
+11. 跨域
+12. JSONP 的过程
+13. 讲讲模块化
+14. vuex 的几大模块
+15. vuex 中 Action 与 Mutation 的区别
+16. vue 和 react 的区别
+17. 时间复杂度和空间复杂度
+18. 排序算法有哪些
+19. 反问
+
+### 二面 2020/5/28 17min
+
+1. 自我介绍
+2. 聊论文 10min
+3. display有哪些值
+4. position的值，区别
+5. margin 和 padding 的区别
+6. 浅拷贝 和 深拷贝
+7. 你有哪些爱好
+8. 反问
