--- a/02.数据结构与算法/数据结构与算法.md
+++ b/02.数据结构与算法/数据结构与算法.md
@@ -1,5 +1,30 @@
 # 常用的数据结构
 
+- [常用的数据结构](#常用的数据结构)
+  - [一、数组](#一数组)
+  - [二、栈](#二栈)
+    - [1.特点](#1特点)
+    - [2.自定义栈的完整操作](#2自定义栈的完整操作)
+    - [3.使用栈来实现十进制转二进制](#3使用栈来实现十进制转二进制)
+  - [三、队列](#三队列)
+    - [1. 特点](#1-特点)
+    - [2. 自定义队列的完整操作](#2-自定义队列的完整操作)
+    - [3.优先级队列](#3优先级队列)
+    - [4.封装优先级队列](#4封装优先级队列)
+    - [5.使用队列来实现击鼓传花案例](#5使用队列来实现击鼓传花案例)
+  - [四、链表](#四链表)
+    - [1.链表封装](#1链表封装)
+    - [2.双向链表](#2双向链表)
+  - [五、集合](#五集合)
+  - [六、排序算法](#六排序算法)
+    - [1.冒泡排序](#1冒泡排序)
+    - [2.选择排序](#2选择排序)
+    - [3.插入排序](#3插入排序)
+    - [4.希尔排序](#4希尔排序)
+    - [5.快速排序](#5快速排序)
+    - [6.归并排序](#6归并排序)
+    - [7.堆排序](#7堆排序)
+
 - 数组(Array)
 - 栈(Stack)
 - 链表(Linked List)
