--- a/08.面试高频手撕代码题/面试高频手撕代码题.md
+++ b/08.面试高频手撕代码题/面试高频手撕代码题.md
@@ -1,5 +1,33 @@
 # 面试高频手撕代码题
 
+- [面试高频手撕代码题](#面试高频手撕代码题)
+  - [手写一个闭包](#手写一个闭包)
+  - [函数节流与抖动](#函数节流与抖动)
+  - [手写一个 count 函数](#手写一个-count-函数)
+  - [手写一个 sleep 睡眠函数](#手写一个-sleep-睡眠函数)
+  - [实现一下继承 call apply bind](#实现一下继承-call-apply-bind)
+    - [实现 call](#实现-call)
+    - [实现 apply](#实现-apply)
+    - [实现 bind](#实现-bind)
+  - [手写一个 new](#手写一个-new)
+  - [手写一个 promise](#手写一个-promise)
+  - [手写一个 Ajax](#手写一个-ajax)
+  - [斐波那契数列（递归，DP，循环）](#斐波那契数列递归dp循环)
+  - [数组去重](#数组去重)
+  - [函数柯里化](#函数柯里化)
+  - [手写一个 flatten 函数（数组降维）](#手写一个-flatten-函数数组降维)
+  - [深拷贝 浅拷贝](#深拷贝-浅拷贝)
+  - [手写一个单例模式](#手写一个单例模式)
+  - [手写一个观察者模式](#手写一个观察者模式)
+  - [手写一个发布订阅模式](#手写一个发布订阅模式)
+  - [对一个页面打印所有的结点类型和结点名称](#对一个页面打印所有的结点类型和结点名称)
+  - [异步输出结果](#异步输出结果)
+  - [水平垂直居中](#水平垂直居中)
+  - [三栏布局实现（圣杯布局，双飞燕）](#三栏布局实现圣杯布局双飞燕)
+  - [三角形 扇形](#三角形-扇形)
+  - [实现圆形可点击区域](#实现圆形可点击区域)
+  - [如何将浮点数点左边的数每三位添加一个逗号，如 12000000.11 转化为『12,000,000.11』](#如何将浮点数点左边的数每三位添加一个逗号如-1200000011-转化为1200000011)
+
 ## 手写一个闭包
 
 > 闭包小案例
