yjj:添加面试记录

--- a/09.面试复盘/面试经验-yjj/面试复盘.md
+++ b/09.面试复盘/面试经验-yjj/面试复盘.md
@@ -11,3 +11,25 @@
 美团  一面挂
 网易雷火  一面挂
 ``` 
+##华为
+华为一面 
+1.讲一下在学校做的项目
+2.讲一下用vue做的项目 有没有做完
+3.本科的时候学过哪些与计算机相关
+4.说一下冒泡排序与选择排序的区别
+5.ARP协议是什么
+6.get和post区别
+7.vue原理
+8.nmp 淘宝镜像 cnpm
+9.ajax 
+10.有没有用过angular框架
+11.写个从1000个数里随机取50个不重复的数
+（最后勉勉强强写出来  说是复杂度太高 让我再想想）
+
+二面 15min
+1.项目之一介绍下
+2.你最喜欢哪门课 为什么?
+3.你的职业规划 
+4.你最大竞争力在呢
+5.你的缺点
+
