--- a/09.面试复盘/面试复盘.md
+++ b/09.面试复盘/面试复盘.md
@@ -10,18 +10,18 @@
   蘑菇街 简历挂
   eBay外企 简历挂
   网易互娱 笔试挂
-  小米 无消息
+  小米 无消息，听说每个部门单独招
   东方财富 无消息
   4399（广州）简历挂
   亚信科技 无消息
   恒生电子 太晚 6.21才笔试
   vivo 一面挂
   中科院空天院苏州研究院 一面挂
-  远景智能 一面
+  远景智能 一面挂
   美团 一面 二面挂
   华为 一面 二面 泡池子
-  网易雷火 一面 二面 三面 HR面
-  学而思（北京）一面 二面 HR面
+  网易雷火 一面 二面 三面 HR面 挂
+  学而思（北京）一面 二面 HR面 （已offer）
   触宝（上海） 一面 二面 （已offer）
   趣头条（上海）一面 二面 （已offer）
 ```
