--- a/08.面试高频手撕代码题/面试高频手撕代码题.md
+++ b/08.面试高频手撕代码题/面试高频手撕代码题.md
@@ -831,7 +831,17 @@ var arr1 = [1, 2, 3, [1, 2, 3, 4, [2, 3, 4]], [2, 3], 4, 5]
 flatten(arr1) // [1, 2, 3, 1, 2, 3, 4, 2, 3, 4, 2, 3, 4, 5]
 ```
 
-- 方法 3：reduce + concat + isArray + recursivity
+- 方法 3: toString
+
+```js
+function flatten(arr) {
+    const res = arr.toString().split(',');
+    return result = res.filter(item => item !== '').map(item => Number(item));
+}
+console.log(flatten([1,9,[2,3],[],[0,999,[66, [100,200]]]]))
+```
+
+- 方法 4：reduce + concat + isArray + recursivity
 
 ```JavaScript
 // 使用 reduce、concat 和递归展开无限多层嵌套的数组
@@ -849,7 +859,7 @@ flatDeep(arr1, Infinity)
 // [1, 2, 3, 1, 2, 3, 4, 2, 3, 4]
 ```
 
-- 方法 4：forEach+isArray+push+recursivity
+- 方法 5：forEach+isArray+push+recursivity
 
 ```JavaScript
 // forEach 遍历数组会自动跳过空元素
