--- a/08.面试高频手撕代码题/面试高频手撕代码题.md
+++ b/08.面试高频手撕代码题/面试高频手撕代码题.md
@@ -53,7 +53,7 @@ for (let i = 1; i < 5; i++) {
 //输出 1,2,3,4
 //let 绑定 for 循环，将其重新绑定到每一次的迭代中，保证每次迭代结束都会重新赋值
 //有自己的作用域块，
-//var 没有自己的作用域快，所以循环变量就会后一个覆盖前一个，循环完毕只有一个值输出；
+//var 没有自己的作用域块，所以循环变量就会后一个覆盖前一个，循环完毕只有一个值输出；
 for (var i = 0; i < 5; i++) {
   setTimeout(() => {
     console.log(i)
