--- a/08.面试高频手撕代码题/面试高频手撕代码题.md
+++ b/08.面试高频手撕代码题/面试高频手撕代码题.md
@@ -21,6 +21,7 @@
   - [手写一个观察者模式](#手写一个观察者模式)
   - [手写一个发布订阅模式](#手写一个发布订阅模式)
   - [对一个页面打印所有的结点类型和结点名称](#对一个页面打印所有的结点类型和结点名称)
+  - [获取一个页面所有标签的个数](#获取一个页面所有标签的个数)
   - [异步输出结果](#异步输出结果)
   - [水平垂直居中](#水平垂直居中)
   - [三栏布局实现（圣杯布局，双飞燕）](#三栏布局实现圣杯布局双飞燕)
@@ -1194,6 +1195,30 @@ var nodes = [...document.getElementsByTagName('*')];
 nodes.forEach((node) => {
   console.log(node.nodeType, node.nodeName)
 })
+```
+
+## 获取一个页面所有标签的个数
+
+```js
+function find() {
+  var map = {};
+  function __find(node) {
+    if (node.nodeType === 1) {
+      //这里我们用nodeName属性，直接获取节点的节点名称
+      var tagName = node.nodeName;
+      //判断对象中存在不存在同类的节点，若存在则添加，不存在则添加并赋值为1
+      map[tagName] = map[tagName] ? map[tagName] + 1 : 1;
+    }
+    //获取该元素节点的所有子节点
+    var children = node.childNodes;
+    for (var i = 0; i < children.length; i++) {
+      //递归调用
+      __find(children[i])
+    }
+  }
+  __find(document);
+  return map;
+}
 ```
 
 ## 异步输出结果
