--- a/08.面试高频手撕代码题/面试高频手撕代码题.md
+++ b/08.面试高频手撕代码题/面试高频手撕代码题.md
@@ -123,7 +123,7 @@ function throttle(fn, delay) {
     var nowTime = Date.now()
     if (nowTime - preTime >= delay) {
       preTime = nowTime
-      return fn.apply(this, arguments)
+      fn.apply(this, arguments)
     }
   }
 }
