--- a/08.面试高频手撕代码题/面试高频手撕代码题.md
+++ b/08.面试高频手撕代码题/面试高频手撕代码题.md
@@ -9,11 +9,16 @@
     - [实现 call](#实现-call)
     - [实现 apply](#实现-apply)
     - [实现 bind](#实现-bind)
+  - [用reduce实现map](#用reduce实现map)
+  - [['1', '2', '3'].map(parseInt)返回值](#1-2-3mapparseint返回值)
   - [手写一个 new](#手写一个-new)
   - [手写一个 promise](#手写一个-promise)
+  - [手写Promise.all()](#手写promiseall)
+  - [手写Promise.race()](#手写promiserace)
   - [手写一个 Ajax](#手写一个-ajax)
   - [斐波那契数列（递归，DP，循环）](#斐波那契数列递归dp循环)
   - [数组去重](#数组去重)
+  - [实现一个add函数 满足add(1,2,3)与add(1)(2)(3)结果相同](#实现一个add函数-满足add123与add123结果相同)
   - [函数柯里化](#函数柯里化)
   - [手写一个 flatten 函数（数组降维）](#手写一个-flatten-函数数组降维)
   - [深拷贝 浅拷贝](#深拷贝-浅拷贝)
@@ -379,6 +384,80 @@ bar.myBind(obj)(20, 30)
 bar.myBind(obj, 20, 30)()
 ```
 
+## 用reduce实现map
+
+> reduce是一个累加方法，是对数组累积执行回调函数，返回最终计算结果。
+
+```js
+array.reduce(function(total, currentValue, currentIndex, arr){}, initialValue);
+
+//total 必需。初始值, 或者计算结束后的返回值。
+//currentValue  必需。当前元素
+//currentIndex  可选。当前元素的索引
+//arr   可选。当前元素所属的数组对象。
+//initialValue可选。传递给函数的初始值
+```
+
+> map是遍历数组的每一项，并执行回调函数的操作，返回一个对每一项进行操作后的新数组。
+
+```javascript
+array.map(function(currentValue,index,arr), thisArg)；
+//currentValue  必须。当前元素的值
+//index 可选。当前元素的索引值
+//arr   可选。当前元素属于的数组对象
+//thisArg 可选。对象作为该执行回调时使用，传递给函数，用作 "this" 的值。如果省略了 thisArg，或者传入 null、undefined，那么回调函数的 this 为全局对象。
+```
+
+> 用reduce实现map方法
+
+```js
+Array.prototype.myMap = function(fn,thisArg){
+    var res = [];
+    thisArg = thisValue||[];
+    this.reduce(function(pre,cur,index,arr){
+      res.push(fn.call(thisArg,cur,index,arr));
+  },[]);
+  return res;
+}
+var arr = [2,3,1,5];
+arr.myMap(function(item,index,arr){
+    console.log(item,index,arr);
+})
+let res = arr.myMap(v => v * 2);
+console.log(res); // [4,6,2,10]
+```
+
+## ['1', '2', '3'].map(parseInt)返回值
+
+> 首先返回值为: [1, NaN, NaN]
+
+map是传入的函数是有3个参数的: value, index, arr, 而parseInt有两个参数:
+> parseInt(string, radix);
+
+```txt
+string
+要被解析的值。如果参数不是一个字符串，则将其转换为字符串(使用toString 抽象操作)。字符串开头的空白符将会被忽略。
+
+radix 可选
+从 2 到 36，表示字符串的基数。例如指定 16 表示被解析值是十六进制数。请注意，10不是默认值！
+```
+
+所以['1', '2', '3'].map(parseInt)的过程是这样子的:
+
+```js
+parseInt('1', 0); // radix是0的情况见如下解释
+parseInt('2', 1); // radix基数只能取到 2 - 36 之间,所以NaN
+parseInt('3', 2); // radix=2 表示是二进制数,只能有0和1,解析的字符串是'3',所以是NaN
+```
+
+```txt
+如果 radix 是 undefined、0或未指定的，JavaScript会假定以下情况：
+
+如果输入的 string以 "0x"或 "0x"（一个0，后面是小写或大写的X）开头，那么radix被假定为16，字符串的其余部分被当做十六进制数去解析。
+如果输入的 string以 "0"（0）开头， radix被假定为8（八进制）或10（十进制）。具体选择哪一个radix取决于实现。ECMAScript 5 澄清了应该使用 10 (十进制)，但不是所有的浏览器都支持。因此，在使用 parseInt 时，一定要指定一个 radix。
+如果输入的 string 以任何其他值开头， radix 是 10 (十进制)。
+```
+
 ## 手写一个 new
 
 new 的作用:
@@ -529,6 +608,69 @@ MyPromise.prototype.then = function (onResolved, onRejected) {
 }
 ```
 
+## 手写Promise.all()
+
+```js
+Promise.all = function(iterator) {
+  if (!Array.isArray(iterator)) return;
+  let count = 0;
+  let res = [];
+  return new Promise((resolve, reject) => {
+    for(let item of iterator) {
+      Promise.resolve(item)
+      .then(data => {
+        res[count++] = data;
+        if (count === iterator.length) {
+          resolve(res);
+        }
+      })
+      .catch(e => {
+        reject(e);
+      })
+    }
+  })
+}
+
+// test
+let p1 = Promise.resolve(3);
+let p2 = 4;
+let p3 = new Promise(resolve => {
+  setTimeout(resolve, 100, 'lee')
+  // setTimeout的第三个往后参数都是用来作为第一个参数也就是函数的参数,也就是其实是setTimeout(resolve('lee'), 100)
+});
+Promise.all([p1, p2, p3]).then(data => {
+  console.log(data);
+})
+```
+
+## 手写Promise.race()
+
+```js
+Promise.race = function(iterator) {
+  return new Promise((resolve, reject) => {
+    for(let item of iterator) {
+      Promise.resolve(item)
+      .then(data => {
+        resolve(data)
+      })
+      .catch(e => {
+        reject(e)
+      })
+    }
+  })
+}
+
+let p1 = new Promise(resolve => {
+  setTimeout(resolve, 105, 'p1 done')
+})
+let p2 = new Promise(resolve => {
+  setTimeout(resolve, 100, 'p2 done')
+})
+Promise.race([p1, p2]).then(data => {
+  console.log(data); // p2 done
+})
+```
+
 ## 手写一个 Ajax
 
 AJAX 包括以下几个步骤
@@ -646,8 +788,6 @@ function fiber(n) {
 }
 ```
 
-- 循环
-
 ```js
 function fiber(n) {
   if (n === 0 || n === 1) return n
@@ -739,6 +879,27 @@ function quCh(arr) {
 console.log(quCh([1, 2, 3, 4, 3, 3, 3, 7, 6, 6, 9, 9]))
 ```
 
+## 实现一个add函数 满足add(1,2,3)与add(1)(2)(3)结果相同
+
+这是函数柯里化的一种基本表现形式
+
+```js
+function add() {
+  let args = [...arguments];
+  let fn = function() {
+    args.push(...arguments);
+    return fn;
+  }
+  fn.toString = function(){ // toString
+    return args.reduce((t,v)=>t+v);
+  }
+  return fn;
+}
+
+alert(add(1,2,3));
+alert(add(1)(2)(3));
+```
+
 ## 函数柯里化
 
 [参考链接](https://github.com/mqyqingfeng/Blog/issues/42)
@@ -754,10 +915,9 @@ console.log(quCh([1, 2, 3, 4, 3, 3, 3, 7, 6, 6, 9, 9]))
 ES5 实现
 
 ```js
-function curry(fn, args) {
+function curry(fn, args = []) {
   // 获取函数需要的参数长度
   var length = fn.length
-  args = args || []
   return function () {
     // 拼接得到现有的所有参数
     for (let i = 0; i < arguments.length; i++) {
@@ -775,14 +935,11 @@ function curry(fn, args) {
 }
 
 // test
-function add(a, b, c) {
-  return a + b + c
-}
-
-let test = curry(add)
-console.log(test(1)(2)(3))
-console.log(test(1, 2)(3))
-console.log(test(1)(2, 3))
+let add = curry((a,b,c) => a+b+c)
+// 一个一个测试
+console.log(add(1)(2)(3))
+console.log(add(1, 2)(3))
+console.log(add(1)(2, 3))
 ```
 
 ES6 实现
@@ -791,6 +948,12 @@ ES6 实现
 function curry(fn, ...args) {
   return fn.length <= args.length ? fn(...args) : curry.bind(null, fn, ...args)
 }
+
+// test
+let add = curry((a,b,c) => a+b+c);
+console.log(add(1)(2)(3))
+console.log(add(1, 2)(3))
+console.log(add(1)(2, 3))
 ```
 
 ## 手写一个 flatten 函数（数组降维）
@@ -848,7 +1011,8 @@ flatten(arr1) // [1, 2, 3, 1, 2, 3, 4, 2, 3, 4, 2, 3, 4, 5]
 ```js
 function flatten(arr) {
     const res = arr.toString().split(',');
-    return result = res.filter(item => item !== '').map(item => Number(item));
+    // 这里要注意arr存在空数组的情况要踢掉
+    return result = res.filter(item => item !== '').map(Number);
 }
 console.log(flatten([1,9,[2,3],[],[0,999,[66, [100,200]]]]))
 ```
@@ -916,25 +1080,46 @@ const forFlat = (arr = [], depth = 1) => {
 
 - 浅拷贝
 
+> 浅拷贝是指把一个对象obj的属性值直接拷贝给另一个对象，其中包括了原始类型的值，还有引用类型的内存地址
+
 ```js
 // 方法1：原生的Object.assign(target, src)方法来实现浅拷贝
-var a = {
+let obj = {
   name: 'Lee',
   age: 18,
-  sex: 'male',
+  gf: {
+    name: 'Yjj',
+    age: 18
+  }
 }
-console.log(Object.assign({}, a)) // {name: "Lee", age: 18, sex: "male"}
+let newObj = Object.assign({}, obj);
+obj.gf.age = 25;
+console.log(newObj) // {"name":"lee","age":18,"gf":{"name":"yjj","age":25}}
 // 注意这个方法target对象是第一个参数
 ```
 
 ```js
-// 方法2：扩展运算符
-var a = {
+// 方法2：扩展运算符（也是浅拷贝）
+let obj1 = {
+  name: 'Lee',
+  age: 18
+}
+let newObj1 = {...obj}
+obj1.age = 25;
+console.log(newObj1); // {name: "Lee", age: 18}
+
+// 对象里面有对象
+let obj2 = {
   name: 'Lee',
   age: 18,
-  sex: 'male',
+  gf: {
+    name: 'Yjj',
+    age: 18
+  }
 }
-console.log({ ...a })
+let newObj2 = {...obj2};
+obj2.gf.age = 25;
+console.log(newObj2); // {"name":"lee","age":18,"gf":{"name":"yjj","age":25}}
 ```
 
 ```js
@@ -1084,7 +1269,7 @@ var events = (function () {
 ES6 写法：
 
 ```js
-class Events {
+class Event {
   constructor() {
     this.events = {}
   }
@@ -1199,6 +1384,20 @@ let time = setInterval(() => {
 //  have a rest
 ```
 
+- 来看一个简单的用途:
+
+```js
+document.querySelector('#btn').addEventListener('click', function () {
+  alert('You click this btn');
+}, false)
+```
+
+我们平时对 DOM 的事件绑定就是一个非常典型的 发布-订阅者模式 ，这里我们需要监听用户点击按钮这个动作，但是我们却无法知道用户什么时候去点击，所以我们订阅 按钮上的 click 事件，只要按钮被点击时，那么按钮就会向订阅者发布这个消息，我们就可以做对应的操作了。
+
+- 再看vue中一个简答的用途:子组件与父组件通信
+
+Vue 中我们通过 props 完成父组件向子组件传递数据，子组件与父组件通信我们通过自定义事件即 $on,$emit来实现，其实也就是通过 $emit 来发布消息，并对订阅者 $on 做统一处理 ~
+
 ## 对一个页面打印所有的结点类型和结点名称
 
 ```JavaScript
@@ -1272,6 +1471,101 @@ setTimeout
 ```
 
 ## 水平垂直居中
+
+- html代码
+
+```html
+<div class="out">
+  <div class="inner"></div>
+</div>
+```
+
+> flex布局
+
+```css
+.out {
+  width: 400px;
+  height: 400px;
+  background-color: #cccccc;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.inner {
+  width: 200px;
+  height: 200px;
+  background-color: red;
+}
+```
+
+> position 定位
+
+- margin-top margin-left
+
+```css
+.out {
+  width: 400px;
+  height: 400px;
+  background-color: #cccccc;
+  position: relative;
+}
+
+.inner {
+  width: 200px;
+  height: 200px;
+  background-color: red;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  /* 已知子盒子的宽高 */
+  margin-top: -100px;
+  margin-left: -100px;
+}
+```
+
+- calc()函数
+
+```css
+.out {
+  width: 400px;
+  height: 400px;
+  background-color: #cccccc;
+  position: relative;
+}
+
+.inner {
+  width: 200px;
+  height: 200px;
+  background-color: red;
+  position: absolute;
+  /* css calc()函数 需要注意的是，运算符前后都需要保留一个空格 */
+  left: calc(50% - 100px);
+  top: calc(50% - 100px);
+}
+```
+
+- transform属性
+
+```css
+.out {
+  width: 400px;
+  height: 400px;
+  background-color: #cccccc;
+  position: relative;
+}
+
+.inner {
+  width: 200px;
+  height: 200px;
+  background-color: red;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  /* css3 的transform属性 */
+  transform: translate(-50%, -50%);
+}
+```
 
 ## 三栏布局实现（圣杯布局，双飞燕）
 
@@ -1353,8 +1647,24 @@ document.onclick = function (e) {
 
 ## 如何将浮点数点左边的数每三位添加一个逗号，如 12000000.11 转化为『12,000,000.11』
 
+> toLocaleString()
+
+```js
+function format(number) {
+  return number.toLocaleString();
+}
+```
+
+> replace
+
 ```js
 function format(number) {
   return number && number.replace(/(?!^)(?=(\d{3})+\.)/g, ",");
+}
+```
+
+```js
+function format(number) {
+  return number && number.toString().replace(/(\d)(?=(\d{3})+\.)/g, $2 => $2 + ',')
 }
 ```
