--- a/02.数据结构与算法/数据结构与算法.md
+++ b/02.数据结构与算法/数据结构与算法.md
@@ -801,7 +801,7 @@ function selectionSort(arr) {
 - 重复上一个步骤，直到找到已排序的元素小于或者等于新元素 temp 的位置
 - 将新元素插入到该位置后, 重复上面的步骤
 
-![冒泡排序](imgs/插入排序图解.webp)
+![插入排序](imgs/插入排序图解.webp)
 
 插入排序的比较次数:
 
@@ -842,7 +842,7 @@ function insertionSort(arr) {
 - 排序后的新序列, 一定可以让数字离自己的正确位置又近了一步.
 - 最后, 我们让间隔为 1, 也就是正确的插入排序. 这个时候数字都离自己的位置更近, 那么需要复制的次数一定会减少很多.
 
-![冒泡排序](imgs/希尔排序图解.webp)
+![希尔排序](imgs/希尔排序图解.webp)
 
 选择合适的增量:
 
