--- a/08.面试高频手撕代码题/面试高频手撕代码题.md
+++ b/08.面试高频手撕代码题/面试高频手撕代码题.md
@@ -411,12 +411,12 @@ array.map(function(currentValue,index,arr), thisArg)；
 > 用reduce实现map方法
 
 ```js
-Array.prototype.myMap = function(fn,thisArg){
+Array.prototype.myMap = function(fn, thisArg){
     var res = [];
-    thisArg = thisValue||[];
-    this.reduce(function(pre,cur,index,arr){
-      res.push(fn.call(thisArg,cur,index,arr));
-  },[]);
+    thisArg = thisArg || [];
+    this.reduce(function(pre, cur, index, arr){
+      res.push(fn.call(thisArg, cur, index, arr));
+  }, []);
   return res;
 }
 var arr = [2,3,1,5];
