--- a/09.面试复盘/秋招面试复盘.md
+++ b/09.面试复盘/秋招面试复盘.md
@@ -2,11 +2,34 @@
 
 投递记录:
 
-- 上海腾讯 PCG 腾讯视频 笔试时间 2020/8/19
-- 上海字节 Data部门
-- 南京华为 两个志愿(CBG云服务部/CBG电商平台) 2020/8/21
-- 海康威视 三个志愿(杭州/南京/上海) 2020/8/21
-- 恒生电子 杭州 2020/8/21
-- 上海触宝 2020/8/21
-- 上海东方财富 2020/8/21
-- 南京焦点科技 2020/8/21
+## 上海腾讯 PCG 腾讯视频 2020/8/19投递
+
+> 笔试时间 2020/8/23
+
+## 上海字节 Data部门
+
+> 笔试时间 2020/8/23
+
+### 一面 2020/8/27
+
+## 上海京东 2020/7/19投递（提前批转校招）
+
+> 笔试时间 2020/8/27
+
+## 南京华为 两个志愿(CBG云服务部/CBG电商平台) 2020/8/21投递
+
+## 海康威视 三个志愿(杭州/南京/上海) 2020/8/21投递
+
+## 恒生电子 杭州 2020/8/21投递
+
+## 上海触宝 2020/8/21投递
+
+> 笔试时间 2020/8/25
+
+## 上海东方财富 2020/8/21投递
+
+## 南京焦点科技 2020/8/21投递
+
+### 一面 2020/9/1
+
+## shopee 2020/8/25投递
